Fix Docs versions dropdown styles on mobiles

--- a/docs/.vuepress/theme/styles/index.styl
+++ b/docs/.vuepress/theme/styles/index.styl
@@ -216,13 +216,23 @@ a {
   overflow-x: scroll;
 }
 
+table.htCore {
+  display: table;
+}
+
 table {
   width: 100%;
-  display: table;
-  overflow: scroll;
 
   tr {
       border-top: none;
+  }
+
+  td {
+      white-space: normal;
+
+      @media (max-width: $MQNarrow) {
+        white-space: nowrap;
+      }
   }
 
   th, td {
@@ -231,11 +241,6 @@ table {
       line-height: 1.7;
       text-align: left;
   }
-}
-
-/* fix for very wide tables in the migration guides */
-.migration-guide table {
-  word-break: break-word;
 }
 
 // floating sidebar should be inline on mobile, and float on wider screens
